--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -1,5 +1,5 @@
 <div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-2">Get Village Bench Marking</div>
+    <div class="text-4xl font-extrabold tracking-tight">Get Village Bench Marking</div>
 
     <!-- Header -->
     <div class="pt-4" [formGroup]="getVillageBenchmarkForm">
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-lg-3 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
                         <mat-label class="customMatLabel">Zone</mat-label>
@@ -88,9 +88,9 @@
 
 
 
-        <div class="row">
+        <div class="row py-2">
             <div class="col-lg-3 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <button mat-raised-button class="mat-primary"
                             type="button" (click)="search()"><mat-icon class="mr-2">search</mat-icon> Search</button>
