--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -109,8 +109,8 @@
 
   </div>
   <div class="row">
-    <div class="col-md-3 col-sm-12">
-    <div class="flex flex-shrink-0 items-center mr-20">
+    <div class="col-md-3 col-sm-12 py-2">
+    <div class="flex flex-shrink-0 items-center">
       <button (click)="searchloanutilization()" mat-flat-button [color]="'primary'">
         <mat-icon class="mr-2">search</mat-icon> Search
       </button>
