bugs fixed by ghazan

--- a/src/@fuse/components/navigation/vertical/components/aside/aside.component.html
+++ b/src/@fuse/components/navigation/vertical/components/aside/aside.component.html
@@ -62,7 +62,9 @@
                 <ng-container *ngIf="item.type === 'basic'">
                     <fuse-vertical-navigation-basic-item
                         [item]="item"
-                        [name]="name"></fuse-vertical-navigation-basic-item>
+                        [name]="name">
+
+                    </fuse-vertical-navigation-basic-item>
                 </ng-container>
 
                 <!-- Collapsable -->
@@ -70,7 +72,8 @@
                     <fuse-vertical-navigation-collapsable-item
                         [item]="item"
                         [name]="name"
-                        [autoCollapse]="autoCollapse"></fuse-vertical-navigation-collapsable-item>
+                        [autoCollapse]="autoCollapse">
+                    </fuse-vertical-navigation-collapsable-item>
                 </ng-container>
 
                 <!-- Divider -->
