--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -87,15 +87,15 @@
                         <!-- <tr *ngFor="let cus of DeceasedCustomerInf"> -->
                         <tr>
                             <td>
-                                <input class="mt-4" style="width: 170px" matInput formControlName="Cn" placeholder=""
+                                <input class="mt-4" style=" width: 170px" matInput formControlName="Cn" placeholder=""
                                        maxlength="13" autocomplete="off" readonly/>
                             </td>
                             <td>
-                                <input class="mt-4" style="width: 170px" matInput formControlName="CustomerName"
+                                <input class="mt-4" style="width: fit-content;" matInput formControlName="CustomerName"
                                        placeholder="" maxlength="30" autocomplete="off" readonly/>
                             </td>
                             <td>
-                                <input class="mt-4" style="width: 170px" matInput formControlName="FatherName"
+                                <input class="mt-4" style="width: fit-content;" matInput formControlName="FatherName"
                                        placeholder="" maxlength="30" autocomplete="off" readonly/>
                             </td>
                             <td>
