--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/address-location/address-location.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/address-location/address-location.component.html
@@ -25,8 +25,7 @@
                [mapTypeControlOptions]="controlOptions"
                [mapTypeControl]="true"
                (mapReady)="onMapReady($event)"
-               [restriction]="countryRestriction"
-               (mapClick)="click($event)">
+               [restriction]="countryRestriction">
 
                 <agm-marker  *ngFor="let prev of PreviousLocation"
                               [latitude]="prev.lat"
