--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
@@ -156,7 +156,7 @@
         </div>
         <div class="col-lg-9 flex col-sm-12">
 
-          <div>
+          <div class="col-lg-5">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Location<strong class="matMandatory">*</strong></mat-label>
               <input matInput formControlName="Location"  autocomplete="off" readonly="readonly" />
